--- a/environment.yml
+++ b/environment.yml
@@ -1,6 +1,26 @@
 name: modelitWITHpymol-binderized
 channels:
+  - schrodinger
+  - samoturk
+  - conda-forge
+  - anaconda
 
 dependencies:
-- selenium
-- openjdk19-slim
+  - python
+  - pymol>=2.3
+  - jupyterlab>=3.2.9
+  - pandas
+  - matplotlib
+  - seaborn
+  - libglu
+  - glew
+  - netpbm
+  - geckodriver
+  - selenium
+  - pip
+  - pip:
+    - pyfaidx
+     - ipywidgets
+    - halo
+    - jupytext
+    - jupyter-archive
